--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         
         <div id="slider">
-            <img src="" alt="">
+            <!-- <img src="/assets/img/slider/anh1.jpg" alt=""> -->
         </div>
         <div id="content">
             <!-- Giới thiệu -->
